perf(SEO): add meta description

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,10 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
     <meta name="theme-color" content="#000000" />
+    <meta
+      name="description"
+      content="Jaka Daneu portfolio. Jaka Daneu is junior MERN stack developer based in Ljubljana, Slovenia"
+    />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="stylesheet" href="%PUBLIC_URL%/css/default.css" />
     <link rel="stylesheet" href="%PUBLIC_URL%/css/layout.css" />
